###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "tcmalloc")
local_path_override(
	module_name = "tcmalloc",
	path = "/users/zyqiao/troubridge"
)

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "rocksdb", version = "9.11.2")